[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ehrviz"
version = "0.1.0"
description = "A library for visualizing EHR data in MEDS format and statistics of EHR."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Kiril Klein", email = "kikl@di.ku.dk" },
]
keywords = ["EHR", "visualization", "statistics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps."
]
dependencies = [
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "matplotlib>=3.8.0"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "unittest"
]

[project.urls]
Homepage = "https://github.com/kirilklein/ehrviz"
Source = "https://github.com/kirilklein/ehrviz"
Tracker = "https://github.com/kirilklein/ehrviz/issues"
